fix mobile layout overlap

--- a/about.css
+++ b/about.css
@@ -433,6 +433,9 @@ footer *,
     box-shadow: -2px 0 5px rgba(243, 4, 4, 0.1);
     transition: right 0.3s ease-in-out;
     box-sizing: border-box;
+    /*added the following lines to fix the issue of the hamburger menu not appearing on top of the about card*/
+    transform: translateZ(1000px);
+    -webkit-transform: translateZ(1000px);
     
   }
   .hamburger-text a.side{
@@ -526,7 +529,7 @@ footer *,
     }
 
     .about {
-        z-index: 999;
+        z-index: 10 !important; /*made changes here too originally the value was 1000*/
         position: absolute;
         top: 20%;
         left: 50%;
